--- a/session1/projet1.ipynb
+++ b/session1/projet1.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -45,11 +45,11 @@
     "    \n",
     "    for mot in clean_text:\n",
     "        if mot in dico.keys():\n",
-    "            dico[mot] = dico[mot] + 1\n",
+    "            dico[mot] += 1\n",
     "        else:\n",
     "            dico[mot] = 1\n",
     "    return dico\n",
-    "\n",
+    "    # c = Counter() puis c.count(liste des mots)\n",
     "print(count_words(\"Alice's Adventures in Wonderland\"))"
    ]
   },
