--- a/session3/projet3.ipynb
+++ b/session3/projet3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "[2052781 rows x 4 columns]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "pandas.core.indexes.range.RangeIndex"
       ]
      },
-     "execution_count": 187,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
        "[6075 rows x 3 columns]"
       ]
      },
-     "execution_count": 194,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,9 +462,10 @@
     "    df = df.dropna()\n",
     "    \n",
     "    ### Convert all values into float\n",
-    "    for dev in devises:\n",
-    "        df[dev] = df[dev].str.replace(',', '.')\n",
-    "    df = df.astype('float')\n",
+    "    df[devises] = df[devises].apply(lambda x : x.str.replace(',', '.').astype(float))\n",
+    "    #for dev in devises:\n",
+    "     #   df[dev] = df[dev].str.replace(',', '.')\n",
+    "    #df = df.astype('float')\n",
     "    \n",
     "    return df\n",
     "\n",
@@ -480,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +556,7 @@
       "test_df_taux_change (__main__.Session3Tests) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 3 tests in 9.951s\n",
+      "Ran 3 tests in 15.748s\n",
       "\n",
       "OK\n"
      ]
